creamos la clase burger y creamos su controller con ENtity FrameWork para crear la badse de datos

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MateoPugaDB": "Server=(localdb)\\mssqllocaldb;Database=MateoPugaDB-504a35af-ecf7-4421-b1d7-e304e7c65a51;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
