--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MateoPugaDB": "Server=(localdb)\\mssqllocaldb;Database=MateoPugaDB-504a35af-ecf7-4421-b1d7-e304e7c65a51;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MateoPugaDB": "Server=(localdb)\\mssqllocaldb;Database=MateoPugaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
